--- a/monthgallery.html
+++ b/monthgallery.html
@@ -1,8 +1,14 @@
 <!-- HTML code to display an image based on the current month -->
 
 <!-- Display a default image -->
-<img id="monthly-image" src="default.jpg" alt="Default image">
-
+<center>
+<img id="monthly-image" src="default.jpg" alt="Default image"> </center>
+<style>
+    img {
+      max-width: 100%;
+      max-height: 100%;
+    }
+  </style>
 <!-- Use JavaScript to determine the current month and update the image source -->
 <script>
   // Get the current month as a number (0-11)
