--- a/welcome.html
+++ b/welcome.html
@@ -1,4 +1,3 @@
-<!-- original : https://codepen.io/SeanNorton/pen/LWBXQL -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,6 +28,7 @@ h1 {
     display: table;
     height: 100%;
     width: 100%;
+    margin: 0px;
 }
 
 .table-cell {
@@ -39,18 +39,19 @@ h1 {
 
 .card {
     padding: 10px 25px 10px 25px;
+    margin: 0px;
     border-radius: 10px;
     background: linear-gradient(90deg, #AACAEF 0%, #AFCCF0 5.68%, #FDE7F9 100%);
-    width: 85vw;
+    width: 90%;
     color: #fff;
     display: inline-block;
     box-shadow: none;
 }
 
-.card:hover {
+/* .card:hover {
     margin-top: 2px;
     box-shadow: none;
-}
+} */
 
 .clock {
     display: inline;
