--- a/epicRss.html
+++ b/epicRss.html
@@ -9,6 +9,5 @@
   </head>
   </html>
   
-  <rssapp-imageboard id="EnEw1ClDF8k6RQgT"></rssapp-imageboard><script src="https://widget.rss.app/v1/imageboard.js" type="text/javascript" async></script>
-
+  <rssapp-imageboard id="sUtW2cB5f8f9vAi1"></rssapp-imageboard><script src="https://widget.rss.app/v1/imageboard.js" type="text/javascript" async></script>
   </html>
