--- a/epicRss.html
+++ b/epicRss.html
@@ -9,5 +9,5 @@
   </head>
   </html>
   
-  <rssapp-imageboard id="sUtW2cB5f8f9vAi1"></rssapp-imageboard><script src="https://widget.rss.app/v1/imageboard.js" type="text/javascript" async></script>
+  <rssapp-carousel id="sUtW2cB5f8f9vAi1"></rssapp-carousel><script src="https://widget.rss.app/v1/carousel.js" type="text/javascript" async></script>
   </html>
